<resources>
    <string name="app_name">BLoodLinkApplication</string>
    <string name="bloodlink">BloodLink</string>
    <string name="notification_button_main_screen">Notification Button Main Screen</string>
    <string name="here_villbe_list_of_image">Here villbe List of Image</string>
    <string name="services">Services</string>
    <string name="bloodsearchicon">BloodSearchIcon</string>
    <string name="find_donor">Find Donor</string>
    <string name="blood_donates_icon">blood Donates Icon</string>
    <string name="requests">Requests</string>
    <string name="view_all">View All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appointments">Appointments</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search">Search...</string>
    <string name="company_logo">Company Logo</string>
    <string name="messageApiLink">/api/chatbot/message</string>
    <string name="speak_or_type_your_querys">Speak or type your querys</string>
</resources>