<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bacground_color_drawable"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HomePageBloodLink">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mainScreenToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/bloodlink"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/notificationButtonMainPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_square"
            android:contentDescription="@string/notification_button_main_screen"
            android:padding="5dp"
            android:src="@drawable/baseline_notifications_24"

            />

    </com.google.android.material.appbar.MaterialToolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenToolBar"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/materialCardButtonForFindDonorServiceMainPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mainPageBannerCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintWidth_percent="1.0"
                app:layout_constraintDimensionRatio="H,1:0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/here_villbe_list_of_image"
                    android:src="@drawable/test_image"
                    android:scaleType="fitXY"

                    />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/serviceTextViewStill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/services"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/mainPageBannerCard"
                app:layout_constraintStart_toStartOf="parent"
                />
            <HorizontalScrollView
                android:id="@+id/serviceHorizontalScrollViewMainPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/serviceTextViewStill"

                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="13dp"
                        app:cardBackgroundColor="@color/pinkish"
                        app:strokeColor="#000000"
                        app:strokeWidth="1dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:orientation="horizontal"
                            >
                            <ImageButton
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/bloodsearchicon"
                                android:padding="5dp"
                                android:background="@drawable/ovalshapegradient"
                                android:src="@drawable/bloodsearchicon"
                                android:scaleType="fitXY"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="15dp"
                                android:fontFamily="@font/inter_medium"
                                android:text="@string/find_donor"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/materialCardButtonForDonatesServiceMainPage"
                        android:layout_width="0dp"
                        android:layout_marginStart="10dp"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="13dp"
                        app:cardBackgroundColor="@color/pinkish"
                        app:strokeColor="#000000"
                        app:strokeWidth="1dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:orientation="horizontal"
                            >
                            <ImageButton
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/blood_donates_icon"
                                android:padding="5dp"
                                android:background="@drawable/ovalshapegradient"
                                android:src="@drawable/bloodsearchicon"
                                android:scaleType="fitXY"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="15dp"
                                android:fontFamily="@font/inter_medium"
                                android:text="@string/find_donor"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/materialCardButtonForOrderServiceMainPage"
                        android:layout_width="0dp"
                        android:layout_marginStart="10dp"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="13dp"
                        app:cardBackgroundColor="@color/pinkish"
                        app:strokeColor="#000000"
                        app:strokeWidth="1dp"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:orientation="horizontal"
                            >
                            <ImageButton
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/bloodsearchicon"
                                android:padding="5dp"
                                android:background="@drawable/ovalshapegradient"
                                android:src="@drawable/bloodsearchicon"
                                android:scaleType="fitXY"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="15dp"

                                android:fontFamily="@font/inter_medium"
                                android:text="@string/find_donor"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/RequestBloodTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/requests"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/serviceHorizontalScrollViewMainPage"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/ViewAllRequestTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/view_all"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/serviceHorizontalScrollViewMainPage"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RequestsRecyclerViewMainPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/ViewAllRequestTextView"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>